fix: solve warnings